# TISSUE

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py  tutorial.ipynb
.ipynb_checkpoints/: tutorial-checkpoint.ipynb
tests/data/: Locations.txt  Spatial_count.txt  scRNA_count.txt
tests/outputs/: test.csv  truth.csv
tissue/: __init__.py  downstream.py  experiments.py  main.py  utils.py
tissue/SpaGE/: main.py  principal_vectors.py
